--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img source src="https://cdn.discordapp.com/attachments/935601077636718592/1027841881570287666/tinywow_profile_photo_6425719_4.png" alt="Saksham profile" width="60%"></img>
       </td>
       <td>
-        <h1 id="heading"><strong>Rawsum</strong></h1>
+        <h1><strong>Rawsum</strong></h1>
         <p>
           <em>Just a guy with a computer who likes to...I dont really know either <strong>sorry not sorry</strong>.</em>
         </p>
