--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       </td>
       <td>
         <h1><strong>Rawsum</strong></h1>
-        <p>
+        <p class="hed">
           <em>Just a guy with a computer who likes to...I dont really know either <strong>sorry not sorry</strong>.</em>
         </p>
-        <p>
+        <p class="hed1">
           I am learning web developing. I like to eat, but I'm not fat(atleast as of now).
         </p>
       </td>
