--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css\cstyles.css">
     <style >
       body{
-      background-color: hsl(29, 60%, 93%);
+      background-color: #f8ede2;
       text-align: center;
       align-items: center;
       align-content: center;
